feat: Load Data at startup (#272)
* feat: prevent concurrent execution of syncAll and trigger it on application startup

* feat: implement MockGitService for testing and add health check endpoints

* feat: sync projects at startup. logs

* fix: fix merge issues

* fix: sonar issues

* fix: sonar issues

* feat: prevent concurrent execution of cluster sync, trigger initial sync on startup, and add configuration for timeouts

* feat: add distributed lock for cluster sync to prevent concurrent execution across instances and threads

* feat: add test configuration and refactor Git service mocks for improved testing

* feat: refactor CollyStorage initialization and improve project loading logic

* feat: replace thread pool with virtual thread executor, refactor logging, and improve timeouts for cluster sync and REST clients

* feat: enhance cluster sync error handling and add tests for namespace and config map failures

* feat: log execution time for project loading in CollyStorage