@@ -1,11 +1,13 @@
 package org.qubership.colly;
 
 import io.quarkus.logging.Log;
+import io.quarkus.runtime.StartupEvent;
 import io.quarkus.scheduler.Scheduled;
 import jakarta.enterprise.context.ApplicationScoped;
+import jakarta.enterprise.event.Observes;
 import jakarta.inject.Inject;
 import jakarta.ws.rs.NotFoundException;
-import org.eclipse.microprofile.config.inject.ConfigProperty;
+import jakarta.ws.rs.WebApplicationException;
 import org.eclipse.microprofile.rest.client.inject.RestClient;
 import org.qubership.colly.cloudpassport.CloudPassportEnvironment;
 import org.qubership.colly.cloudpassport.ClusterInfo;
@@ -16,6 +18,7 @@ import org.qubership.colly.db.repository.EnvironmentRepository;
 import org.qubership.colly.dto.EnvironmentDTO;
 import org.qubership.colly.mapper.EnvironmentMapper;
 
+import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.Date;
@@ -27,31 +30,43 @@ import java.util.concurrent.Executors;
 @ApplicationScoped
 public class CollyStorage {
 
+    private static final Duration CLUSTER_SYNC_LOCK_TTL = Duration.ofSeconds(120);
+
     private final ClusterResourcesLoader clusterResourcesLoader;
     private final ClusterRepository clusterRepository;
     private final EnvironmentRepository environmentRepository;
     private final EnvgeneInventoryServiceRest envgeneInventoryServiceRest;
     private final Executor executor;
     private final EnvironmentMapper environmentMapper;
+    private final ClusterSyncLock clusterSyncLock;
 
     @Inject
     public CollyStorage(ClusterResourcesLoader clusterResourcesLoader,
                         ClusterRepository clusterRepository,
                         EnvironmentRepository environmentRepository,
                         EnvironmentMapper environmentMapper,
-                        @RestClient EnvgeneInventoryServiceRest envgeneInventoryServiceRest,
-                        @ConfigProperty(name = "colly.environment-operational-service.cluster-resource-loader.thread-pool-size") int threadPoolSize) {
+                        ClusterSyncLock clusterSyncLock,
+                        @RestClient EnvgeneInventoryServiceRest envgeneInventoryServiceRest) {
         this.clusterResourcesLoader = clusterResourcesLoader;
         this.clusterRepository = clusterRepository;
         this.environmentRepository = environmentRepository;
         this.envgeneInventoryServiceRest = envgeneInventoryServiceRest;
-        this.executor = Executors.newFixedThreadPool(threadPoolSize);
+        this.executor = Executors.newVirtualThreadPerTaskExecutor();
         this.environmentMapper = environmentMapper;
+        this.clusterSyncLock = clusterSyncLock;
     }
 
-    @Scheduled(cron = "{colly.environment-operational-service.cron.schedule}")
+    void onStart(@Observes StartupEvent event) {
+        try {
+            syncAllClusters();
+        } catch (Exception e) {
+            Log.warn("Initial sync failed on startup: " + e.getMessage());
+        }
+    }
+
+    @Scheduled(cron = "{colly.environment-operational-service.cron.schedule}", concurrentExecution = Scheduled.ConcurrentExecution.SKIP)
     void syncAllClusters() {
-        Log.info("Task for loading resources from clusters has started");
+        Log.info("Task for sync resources from clusters has started");
         Date startTime = new Date();
         List<ClusterInfo> clusterInfos = envgeneInventoryServiceRest.getClusterInfos();
         List<String> clusterNames = clusterInfos.stream().map(ClusterInfo::name).toList();
@@ -59,24 +74,23 @@ public class CollyStorage {
 
         List<CompletableFuture<Void>> futures = clusterInfos.stream()
                 .map(clusterInfo -> CompletableFuture.runAsync(
-                        () -> {
-                            Log.info("Starting to load resources for cluster: " + clusterInfo.name());
-                            clusterResourcesLoader.loadClusterResources(clusterInfo);
-                            Log.info("Completed loading resources for cluster: " + clusterInfo.name());
-                        }, executor))
+                                () -> syncClusterWithLock(clusterInfo), executor)
+                        .exceptionally(e -> {
+                            Log.error("Sync failed for cluster " + clusterInfo.name() + " (id=" + clusterInfo.id() + ")", e);
+                            return null;
+                        }))
                 .toList();
 
         CompletableFuture<Void> allFutures = CompletableFuture.allOf(futures.toArray(new CompletableFuture[0]));
         try {
-            allFutures.join(); // Wait for all to complete
+            allFutures.join();
         } catch (Exception e) {
             Log.error("Error occurred while loading cluster resources in parallel", e);
         }
 
         Date loadCompleteTime = new Date();
         long loadingDuration = loadCompleteTime.getTime() - startTime.getTime();
-        Log.info("Task for loading resources from clusters has completed.");
-        Log.info("Loading Duration =" + loadingDuration + " ms");
+        Log.info("Task for sync resources from clusters has completed. Duration = " + loadingDuration + "ms");
     }
 
     void syncCluster(String clusterId) {
@@ -84,11 +98,33 @@ public class CollyStorage {
             throw new IllegalArgumentException("Cluster id is null");
         }
         List<ClusterInfo> clusterInfos = envgeneInventoryServiceRest.getClusterInfos();
-        ClusterInfo clusterToSync = clusterInfos.stream().filter(clusterInfo -> clusterId.equals(clusterInfo.id())).findFirst().orElse(null);
-        if (clusterToSync == null) {
-            throw new NotFoundException("Cannot sync cluster. Not found cluster with id=" + clusterId);
+        ClusterInfo clusterToSync = clusterInfos.stream()
+                .filter(clusterInfo -> clusterId.equals(clusterInfo.id()))
+                .findFirst()
+                .orElseThrow(() -> new NotFoundException("Cannot sync cluster. Not found cluster with id=" + clusterId));
+
+        if (!clusterSyncLock.tryAcquire(clusterId, CLUSTER_SYNC_LOCK_TTL)) {
+            throw new WebApplicationException("Cluster with id=" + clusterId + " is already being synced", 409);
         }
-        clusterResourcesLoader.loadClusterResources(clusterToSync);
+        try {
+            clusterResourcesLoader.loadClusterResources(clusterToSync);
+        } finally {
+            clusterSyncLock.release(clusterId);
+        }
+    }
+
+    private void syncClusterWithLock(ClusterInfo clusterInfo) {
+        if (!clusterSyncLock.tryAcquire(clusterInfo.id(), CLUSTER_SYNC_LOCK_TTL)) {
+            Log.infof("Cluster %s is already being synced, skipping", clusterInfo.name());
+            return;
+        }
+        try {
+            Log.info("Starting to load resources for cluster: " + clusterInfo.name());
+            clusterResourcesLoader.loadClusterResources(clusterInfo);
+            Log.info("Completed loading resources for cluster: " + clusterInfo.name());
+        } finally {
+            clusterSyncLock.release(clusterInfo.id());
+        }
     }
 
     public List<EnvironmentDTO> getEnvironments() {
